--- a/productManagement/index.html
+++ b/productManagement/index.html
@@ -7,8 +7,15 @@
     <link href="css/app.css" rel="stylesheet" />
     <script src="js/bootstrap.js"></script>
     <script src="js/angular.js"></script>
+    <script src="js/angular-resource.js"></script>
     <script src="app/app.js"></script>
+    <script src="js/angular-mocks.js"></script>
+    <script src="common/services/productResourceMock.js"></script>
+    <script src="common/services/common.services.js"></script>
+    <script src="common/services/productResource.js"></script>
     <script src="app/products/ProductListCtrl.js"></script>
+
+
 </head>
 <body ng-app="productManagement">
 <div class="panel panel-primary">
